--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "react-auth-code-input": "^3.2.1",
         "react-icons": "^4.7.1",
         "react-markdown": "^8.0.5",
+        "react-toastify": "^9.1.1",
         "walk": "^2.3.15"
     }
 }
