--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     },
     "devDependencies": {
         "@headlessui/react": "^1.7.10",
-        "@inertiajs/react": "1.0.2",
+        "@inertiajs/react": "1.0.6",
         "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-react": "^3.0.0",
         "autoprefixer": "^10.4.12",
@@ -26,6 +26,7 @@
         "@emotion/styled": "^11.10.6",
         "@headlessui/tailwindcss": "^0.1.2",
         "@heroicons/react": "^2.0.15",
+        "@inertiajs/inertia": "^0.11.1",
         "@mui/material": "^5.11.11",
         "@mui/styled-engine-sc": "^5.11.11",
         "@tippyjs/react": "^4.2.6",
