--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "framer-motion": "^9.0.4",
         "jszip": "^3.10.1",
         "katex": "^0.16.7",
+        "lottie-react": "^2.4.0",
         "markdown-it": "^13.0.1",
         "moment-timezone": "^0.5.40",
         "node-html-to-image": "^3.3.0",
