--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@charkour/react-reactions": "^0.11.0",
         "@emotion/react": "^11.10.6",
         "@emotion/styled": "^11.10.6",
+        "@fantassin/axeptio": "^1.0.3",
         "@headlessui/tailwindcss": "^0.1.2",
         "@heroicons/react": "^2.0.15",
         "@mui/material": "^5.11.11",
