--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "katex": "^0.16.7",
         "lottie-react": "^2.4.0",
         "markdown-it": "^13.0.1",
+        "minecraft-auth": "^2.0.3",
         "moment-timezone": "^0.5.40",
         "node-html-to-image": "^3.3.0",
         "primeicons": "^6.0.1",
@@ -62,6 +63,7 @@
         "react-swipeable": "^7.0.0",
         "react-toastify": "^9.1.1",
         "react-twitch-embed": "^3.0.1",
+        "react-webview": "^0.1.0",
         "styled-components": "^5.3.8",
         "twitch-stream-embed": "^1.0.5",
         "walk": "^2.3.15"
